--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
 		<title>Jquery Marker</title>
 		
 		<meta charset="utf-8">
-		<meta content="" name="description">
+		<meta name="description" content="The jquery marker plugin provides easy highlighting with mouse dragging.">
+  		<meta name="keywords" content="Jquery,Marker,Jquery Marker,Jquery Marker Plugin">
+  		<meta name="author" content="Daesung Jeon">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	 	<link href="extensions/spectrum.css" rel="stylesheet">
-	    <link href="jquery.marker.css" rel="stylesheet">
+	    	<link href="jquery.marker.css" rel="stylesheet">
 		<link href="assets/css/index.css" rel="stylesheet" />
 	    
-	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+	    	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.0/jquery-ui.js"></script>
-	    <script src="extensions/spectrum.js"></script>
-	    <script src="jquery.marker.js"></script>
+	    	<script src="extensions/spectrum.js"></script>
+	    	<script src="jquery.marker.js"></script>
 	</head>
 	
 	<body class="js-dispatcher" data-dispatcher-page="home">
