--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	 	<link href="extensions/spectrum.css" rel="stylesheet">
-	    	<link href="jquery.marker.css" rel="stylesheet">
+    	<link href="jquery.marker.css" rel="stylesheet">
 		<link href="assets/css/index.css" rel="stylesheet" />
 	    
-	    	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+    	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.0/jquery-ui.js"></script>
-	    	<script src="extensions/spectrum.js"></script>
-	    	<script src="jquery.marker.js"></script>
+    	<script src="extensions/spectrum.js"></script>
+    	<script src="jquery.marker.js"></script>
 	</head>
 	
 	<body class="js-dispatcher" data-dispatcher-page="home">
@@ -29,7 +29,7 @@
 				<div class="mv-g aife">
 					<div class="mv-g-b mv-g-b--3of5 mv-g-b--4of5_m">
 						<div class="aife df">
-							<a class="db mrm" href="/"><img class="db logo" src="" /> </a>
+							<!-- <a class="db mrm" href="/"><img class="db logo" src="" /> </a> -->
 							<div class="dn db_m">
 								<p class="mbf tss tw7">Daesung Jeon</p>
 								<p class="mbf tsi tss">Jquery Marker Plugin</p>
